# machine-learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build.sh
src/basics/: iris-recon.py  supervised.ipynb
src/c/: gates.c  main.c
src/machine_learning.egg-info/: PKG-INFO  SOURCES.txt
