[project]
name        = "machine-learning"
version     = "0.0.1"
description = "a learning project on machine learning"
readme      = "README.md"
keywords    = ["machine-learning"]

requires-python = ">=3.11"

authors = [
    {name = "Philip Weinmann", email = "Philip.Weinmann@protonmail.com"}
]
maintainers = [
    {name = "Philip Weinmann", email = "Philip.Weinmann@protonmail.com"}
]

# [project.dependencies]
